2024-04-18T08:21:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8734689901 # 383
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: query file size: 24493
* notice: accum prev / next / diff: re vi: 0 275 / 0 276 / +0 +1

2024-04-17T12:31:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8721917454 # 378
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: query file size: 24483
* notice: accum prev / next / diff: re vi: 0 273 / 0 275 / +0 +2

2024-04-17T08:20:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8718627376 # 377
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: query file size: 24501
* notice: accum prev / next / diff: re vi: 0 272 / 0 273 / +0 +1

2024-04-16T12:31:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8705641318 # 372
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: query file size: 24473
* notice: accum prev / next / diff: re vi: 0 271 / 0 272 / +0 +1

2024-04-15T12:30:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8689101745 # 366
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: query file size: 24489
* notice: accum prev / next / diff: re vi: 0 270 / 0 271 / +0 +1

2024-04-15T03:30:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8682856746 # 363